test/classes/diten/derived_field_chosen.good
derived_field_chosen.chpl:9: error: field 's' has same name as parent class field
derived_field_chosen.chpl:2: note: parent class field declared here
